# koan

./: .gitignore  .gitmodules  AGENTS.md  QR_ANALYSIS.md  QR_ANALYSIS_COMPREHENSIVE.md  README.md  design-decisions.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.config/: wt.toml
docs/: AGENTS.md  agent-protocol.md  architecture.md  artifact-review.md  artifacts.md  design-system.md  epic-brief.md  frontend.md  initiative.md  intake-loop.md  ipc.md  memory-system.md  phase-trust.md  planning-widget.md  projections.md  state.md  subagents.md  token-streaming.md  visualization-system.md  workflow-phases.md
evals/: _verify_rubric_migration.py  cases.py  dataset.py  harvest.py  rubrics.py  runner.py  scorers.py  solver.py  tasks.py
extensions/: koan.ts
frontend/: AGENTS.md  index.html  package-lock.json  package.json  vite.config.ts
koan/: __main__.py  artifacts.py  config.py  driver.py  events.py  logger.py  probe.py  projections.py  run_state.py  state.py  subagent.py  types.py
plans/: 2026-02-10-init.md  2026-03-09-refactoring.md  2026-03-13-web-ui-review.md  2026-03-13-web-ui.md  2026-03-14-intake-ui.md  2026-03-14-plan-audit.md  2026-03-16-preact-zustand-rewrite.md  2026-03-21-epic-brief.md  2026-03-21-ui-layout-redesign.md  2026-03-22-realtime-token-streaming.md  2026-03-23-core-flows.md  2026-03-26-koan-debug-step-prompts.md  2026-03-26-standalone-python-rewrite.md  2026-03-28-frontend-react-zustand.md  2026-03-29-event-sourced-projections.md  2026-03-31-symmetric-projection-folds.md  intake-dashboard-ux.md  per-phase-model-selection-plan.md  workflow-orchestrator.md
tests/: audit-log-formatter.test.ts  conversation.test.ts  event-log.test.ts  model-config.test.ts  model-phase.test.ts  model-resolver.test.ts  pool.test.ts  progress.test.ts  qr-grouped-verify.test.ts  session-model-threading.test.ts  test_artifacts.py  (+23 more)
(+537 files in other folders)
