[project]
name = "koan"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "starlette",
    "uvicorn[standard]",
    "fastmcp",
    "aiofiles",
    "jsonpatch",
]

[project.scripts]
koan = "koan.__main__:main"

[dependency-groups]
dev = ["pytest>=8.0", "anyio>=4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["koan"]

[tool.pytest.ini_options]
testpaths = ["tests"]
