[project]
name = "koan"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "starlette",
    "python-multipart",
    "uvicorn[standard]",
    "fastmcp",
    "aiofiles",
    "jsonpatch",
    "pyyaml",
    "json-repair>=0.59.4",
    "voyageai>=0.3",
    "lancedb>=0.20",
    "pydantic-ai-slim[google]>=1.85.1",
]

[project.scripts]
koan = "koan.__main__:main"

[dependency-groups]
dev = ["pytest>=8.0", "anyio>=4.0", "httpx", "deepeval>=3.9.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["koan"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=tests/evals"
